kubernetes/apps/collaboration/mattermost/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
spec:
  hostnames: ["chat.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: mattermost-team-edition
          port: 8065
